# qt_widgets_text_editor

./: CMakeLists.txt  LICENSE.md  main.cpp  mainlayout.cpp  mainlayout.h  mainwindow.cpp  mainwindow.h  namefileform.cpp  namefileform.h  readme.md  styleclass.cpp  styleclass.h  styleform.cpp  styleform.h  styleviewwidget.cpp  styleviewwidget.h  textvar.cpp  textvar.h  widget.cpp  widget.h
io/: export.h  import.cpp  import.h  saver.cpp  saver.h
preprocessor/: preprocessor.cpp  preprocessor.h  textparagraph.cpp  textparagraph.h  textsegment.cpp  textsegment.h
tests/: tst_executepropertyfunc.cpp  tst_styleclasstest.cpp
ui/: mainlayout.cpp  mainlayout.h  mainwindow.cpp  mainwindow.h  styleviewwidget.cpp
ui/forms/: namefileform.cpp  styleform.cpp
